reports/biological-information.log
Traceback (most recent call last):
  File "/Users/gregcaporaso/miniconda3/envs/q2book/lib/python3.6/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/gregcaporaso/miniconda3/envs/q2book/lib/python3.6/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/gregcaporaso/miniconda3/envs/q2book/lib/python3.6/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/gregcaporaso/miniconda3/envs/q2book/lib/python3.6/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/gregcaporaso/miniconda3/envs/q2book/lib/python3.6/asyncio/base_events.py", line 488, in run_until_complete
    return future.result()
  File "/Users/gregcaporaso/miniconda3/envs/q2book/lib/python3.6/site-packages/nbclient/client.py", line 541, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/gregcaporaso/miniconda3/envs/q2book/lib/python3.6/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/gregcaporaso/miniconda3/envs/q2book/lib/python3.6/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
>>> protein
Protein
---------------------------------------------------------------------
Stats:
    length: 178
    has gaps: False
    has degenerates: False
    has non-degenerates: True
    has stops: False
---------------------------------------------------------------------
0   KPQLLGPGHP VSPYLLFLSS SDCAMGLSDG EWQLVLNVWG KVEADIPGHG QEVLIRLFKG
60  HPETLEKFDK FKHLKSEDEM KASEDLKKHG ATVLTALGGI LKKKGHHEAE IKPLAQSHAT
120 KHKIPVKYLE FISECIIQVL QSKHPGDFGA DAQGAMNKAL ELFRKDMASN YKELGFQG
------------------

[0;36m  File [0;32m"<ipython-input-2-76b6fc9cf795>"[0;36m, line [0;32m3[0m
[0;31m    ---------------------------------------------------------------------[0m
[0m                                                                         ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-76b6fc9cf795>, line 3)

